# muxi_spmv

./: .gitignore  CMakeLists.txt  README.md
.claude/: ralph-loop.local.md
cmake/: spmv_fp64Config.cmake.in
doc/: FINAL_OPTIMIZATION_REPORT.md  gpu_optimization_differences.md  optimization_summary_2026_04_03.md  performance_report.md  test_framework_usage.md
doc/analysis/: advanced_patterns_analysis_2026_04_04.md  advanced_techniques_analysis_2026_04_10.md  avgnnz_impact_analysis_2026_04_05.md  column_sort_optimization_2026_04_03.md  complete_optimization_analysis_2026_04_03.md  cross_platform_comparison_2026_04_03.md  deep_analysis_2026_04_03.md  deep_performance_analysis_2026_04_03.md  end_to_end_final_2026_04_05.md  exhaustive_optimization_final_2026_04_05.md  exhaustive_optimization_final_report_2026_04_05.md  exhaustive_optimization_final_report_cn_2026_04_05.md  exhaustive_optimization_summary_2026_04_05.md  final_comparison_2026_04_04.md  final_complete_report_2026_04_05.md  final_exhaustive_optimization_2026_04_04.md  final_hardware_analysis_2026_04_03.md  final_optimization_2026_04_04.md  final_optimization_findings_2026_04_05.md  final_optimization_report_2026_04_03.md  final_optimization_report_2026_04_05.md  final_optimization_summary_2026_04_03.md  final_optimization_summary_2026_04_04.md  final_optimization_summary_2026_04_05.md  final_real_matrix_optimization_2026_04_04.md  final_report_2026_04_03.md  fp64_10_matrix_complete_report_2026_04_11.md  fp64_10_matrix_optimization_comparison_2026_04_12.md  fp64_deep_analysis_2026_04_11.md  fp64_exhaustive_final_comprehensive_2026_04_12.md  fp64_exhaustive_optimization_final_2026_04_11.md  fp64_final_optimization_report_2026_04_09.md  fp64_final_optimization_report_2026_04_10.md  fp64_final_verification_2026_04_12.md  fp64_optimization_comparison_report_2026_04_09.md  fp64_optimization_final_summary_2026_04_10.md  fp64_regcache_bug_verification_2026_04_12.md  fp64_work_completion_summary_2026_04_12.md  kernel_comparison_2026_04_03.md  kernel_performance_comparison_2026_04_03.md  (+12 more)
doc/gpu_comparison/: batched_kernel_optimization.md  csr5_implementation_notes.md  development_differences.md  extreme_sparse_optimization.md  final_optimization_report.md  gpu_comparison_report_2026_04_03.md  mars_x201_optimization_analysis.md  mars_x201_vs_rtx4090.md  spmv_optimization_report.md  test_files_index.md
doc/gpu_differences/: development_guide.md  performance_comparison_2026_04_03.md
doc/gpu_optimization_differences/: mars_x201_vs_rtx4090_guide.md
doc/hardware/: gpu_comparison.md  mars_x201_info.md  mars_x201_vs_rtx4090_fp64_optimization.md  rtx4090_info.md
doc/htcc_tools/: tools.md
doc/lessons/: domestic_gpu_experience.md
doc/optimization/: gpu_differences.md  summary.md
doc/platform_differences/: mars_x201_vs_rtx4090.md  optimization_differences.md
docs/: API.md  BUILD.md  PERFORMANCE_RESULTS.md
examples/: benchmark_kernel_only.cu  benchmark_matrices.cu  benchmark_real_matrices.cu
final/spmv_fp32_real/: CMakeLists.txt
final/spmv_fp32_real/cmake/: spmv_fp32Config.cmake.in
final/spmv_fp32_real/install/: README.md
final/spmv_fp32_real/install/docs/: API.md  PERFORMANCE_TEST_REPORT.md
final/spmv_fp32_real/install/docs_zh/: PERFORMANCE_TEST_REPORT.md
final/spmv_fp32_real/install_X201/: README.md
final/spmv_fp32_real/install_X201/docs/: PERFORMANCE_REPORT.md
final/spmv_fp32_real/install_X201/docs_zh/: API.md  PERFORMANCE_REPORT.md
final/spmv_fp32_real/install_X201/include/: spmv_fp32.h  spmv_fp32_impl.cuh
final/spmv_fp32_real/src/: spmv_fp32.cu  spmv_fp32_impl.cuh
final/spmv_fp32_real/tests/: FP32_COMPARISON_TEST_REPORT.md  FP32_COMPARISON_TEST_REPORT_CN.md  fp32_comparison_test.cu  fp32_iterative_test.cu  fp32_nctigpu_iterative_test.cu  fp32_pinned_e2e_test.cu  fp32_tpr_sweep_test.cu
final/spmv_fp64_real/: CMakeLists.txt  README.md
final/spmv_fp64_real/benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_comparison.cu  benchmark_detailed.cpp  benchmark_optimized.cu  benchmark_real_cases.cu  benchmark_rtx4090.cu  benchmark_rtx4090_large.cu  hc_tracer_results.json  tpr_benchmark.cpp
include/: spmv_fp64.h
python/: analyze_results.py
scripts/: build_direct_mars.sh  build_domestic.sh  build_mars.sh  build_nvidia.sh  build_rtx.sh  generate_test_matrices.sh  setup_python_venv.sh
src/: spmv_fp64.cu  spmv_fp64_impl.cuh
src/api/: spmv_api.cu  spmv_api.h
src/benchmark/: performance_benchmark.cu  performance_benchmark.h
src/formats/: sparse_formats.h
src/generators/: matrix_generator.cu  matrix_generator.h  mtx_io.cu  mtx_io.h
src/preprocessing/: column_reorder.cuh
src/utils/: common.h  device_info.cu  device_info.cuh  timer.h
tests/: deep_analysis.cu  deep_analysis_runner.cpp  device_info.cu  test_adaptive_thread.cu  test_adaptive_warp_optimized.cu  test_advanced_memory_patterns.cu  test_advanced_opt.cu  test_advanced_optimizations.cu  test_advanced_patterns.cu  test_advanced_prefetch.cu  test_aggressive_optimizations.cu  test_avgnnz_impact.cu  test_block_optimization.cu  test_block_precise.cu  test_block_size_optimization.cu  test_cache_optimizations.cu  test_column_reorder.cu  test_column_reordering.cu  test_combined_optimization.cu  test_combined_optimizations.cu  test_comprehensive_analysis.cu  test_e2e_fixed.cu  test_end_to_end.cu  test_end_to_end_multistream.cu  test_extreme_opt.cu  test_extreme_optimizations.cu  test_format_comparison.cu  test_global_reorder.cu  test_instruction_mix.cu  test_kernel_comparison.cu  test_kernel_comparison_fair.cu  test_kernel_variants_real.cu  test_l1_cache_config.cu  test_lane_allocation.cu  test_large_smem.cu  test_low_density_optimized.cu  test_matrix_pattern_analysis.cu  test_memory_access_patterns.cu  test_memory_patterns.cu  test_merge_vs_bankaware.cu  (+23 more)
tests/benchmark/: test_additional_optimizations.cu  test_additional_optimizations_rtx4090.cu  test_additional_optimizations_timed.cu  test_advanced_techniques.cu  test_col_locality.cu  test_comprehensive_optimization.cu  test_direct_kernel_comparison.cu  test_ellpack.cu  test_runner.cu  (+8 more)
(+41 files in other folders)
